@startuml
!theme plain

entity users {
    id: UUID <<PK>>
    --
    email: VARCHAR(255)
    password: TEXT
    timezone: VARCHAR(64)
    theme_color: theme_color_enum
    language: VARCHAR(5)
    created_at: TIMESTAMPTZ
    updated_at: TIMESTAMPTZ
}

entity categories {
    id: UUID <<PK>>
    --
    user_id: UUID <<FK>>
    name: TEXT
    registered_at: TIMESTAMPTZ
    edited_at: TIMESTAMPTZ
    created_at: TIMESTAMPTZ
    updated_at: TIMESTAMPTZ
}

entity review_patterns {
    id: UUID <<PK>>
    --
    user_id: UUID <<FK>>
    name: TEXT
    target_weight: target_weight_enum
    registered_at: TIMESTAMPTZ
    edited_at: TIMESTAMPTZ
    created_at: TIMESTAMPTZ
    updated_at: TIMESTAMPTZ
}

entity review_boxes {
    id: UUID <<PK>>
    --
    user_id: UUID <<FK>>
    category_id: UUID <<FK>>
    pattern_id: UUID <<FK NULL>>
    name: TEXT
    registered_at: TIMESTAMPTZ
    edited_at: TIMESTAMPTZ
    created_at: TIMESTAMPTZ
    updated_at: TIMESTAMPTZ
}

entity review_items {
    id: UUID <<PK>>
    --
    user_id: UUID <<FK>>
    category_id: UUID <<FK NULL>>
    box_id: UUID <<FK NULL>>
    pattern_id: UUID <<FK NULL>>
    name: TEXT
    detail: TEXT
    learned_date: DATE
    is_finished: BOOLEAN
    registered_at: TIMESTAMPTZ
    edited_at: TIMESTAMPTZ
    created_at: TIMESTAMPTZ
    updated_at: TIMESTAMPTZ
}

entity pattern_steps {
    id: UUID <<PK>>
    --
    user_id: UUID <<FK>>
    pattern_id: UUID <<FK>>
    step_number: SMALLINT
    interval_days: SMALLINT
    created_at: TIMESTAMPTZ
    updated_at: TIMESTAMPTZ
}

entity review_dates {
    id: UUID <<PK>>
    --
    user_id: UUID <<FK>>
    category_id: UUID <<FK NULL>>
    box_id: UUID <<FK NULL>>
    item_id: UUID <<FK>>
    step_number: SMALLINT
    initial_scheduled_date: DATE
    scheduled_date: DATE
    is_completed: BOOLEAN
    created_at: TIMESTAMPTZ
    updated_at: TIMESTAMPTZ
}

users ||--o{ categories : user_id
users ||--o{ review_patterns : user_id
users ||--o{ review_boxes : user_id
users ||--o{ review_items : user_id
users ||--o{ pattern_steps : user_id
users ||--o{ review_dates : user_id

categories ||--o{ review_boxes : category_id
categories }o--o{ review_items : category_id
categories }o--o{ review_dates : category_id

review_patterns ||--o{ review_boxes : pattern_id
review_patterns ||--o{ review_items : pattern_id
review_patterns ||--o{ pattern_steps : pattern_id

review_boxes }o--o{ review_items : box_id
review_boxes }o--o{ review_dates : box_id

review_items ||--o{ review_dates : item_id

@enduml